[gd_scene load_steps=19 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://card pattern/back.png" type="Texture" id=2]
[ext_resource path="res://card pattern/0000.png" type="Texture" id=3]
[ext_resource path="res://images.gd" type="Script" id=4]
[ext_resource path="res://card pattern/0002.png" type="Texture" id=5]
[ext_resource path="res://card pattern/0001.png" type="Texture" id=6]
[ext_resource path="res://card pattern/0005.png" type="Texture" id=7]
[ext_resource path="res://card pattern/0006.png" type="Texture" id=8]
[ext_resource path="res://card pattern/0003.png" type="Texture" id=9]
[ext_resource path="res://card pattern/0004.png" type="Texture" id=10]
[ext_resource path="res://card pattern/0007.png" type="Texture" id=11]
[ext_resource path="res://card pattern/output_10_06_04_06_43_0408.png" type="Texture" id=12]
[ext_resource path="res://card pattern/m_frame.png" type="Texture" id=13]
[ext_resource path="res://mplus-1c-regular.ttf" type="DynamicFontData" id=14]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 144, 256 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 638.75, 145.75 )

[sub_resource type="DynamicFont" id=4]
size = 26
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 606, 478 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 12 )

[node name="textures" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2( 102, 181 )
scale = Vector2( 0.7, 0.7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 3 )

[node name="Area2D2" type="Area2D" parent="."]
visible = false
position = Vector2( 102, 540 )
scale = Vector2( 0.7, 0.7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D2"]
texture = ExtResource( 6 )

[node name="Area2D3" type="Area2D" parent="."]
visible = false
position = Vector2( 306, 362 )
scale = Vector2( 0.7, 0.7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D3"]
texture = ExtResource( 5 )

[node name="Area2D4" type="Area2D" parent="."]
visible = false
position = Vector2( 640, 437 )
scale = Vector2( 0.7, 0.7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D4"]
texture = ExtResource( 2 )

[node name="Area2D5" type="Area2D" parent="."]
visible = false
position = Vector2( 980, 360 )
scale = Vector2( 0.7, 0.7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D5"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D5"]
texture = ExtResource( 10 )

[node name="Area2D6" type="Area2D" parent="."]
visible = false
position = Vector2( 1182, 540 )
scale = Vector2( 0.7, 0.7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D6"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D6"]
texture = ExtResource( 7 )

[node name="Area2D7" type="Area2D" parent="."]
visible = false
position = Vector2( 1182, 181 )
scale = Vector2( 0.7, 0.7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D7"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D7"]
texture = ExtResource( 8 )

[node name="Area2D8" type="Area2D" parent="."]
visible = false
position = Vector2( 426, 655 )
scale = Vector2( 0.25, 0.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D8"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D8"]
texture = ExtResource( 2 )

[node name="Area2D9" type="Area2D" parent="."]
visible = false
position = Vector2( 498, 655 )
scale = Vector2( 0.25, 0.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D9"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D9"]
texture = ExtResource( 2 )

[node name="Area2D10" type="Area2D" parent="."]
visible = false
position = Vector2( 570, 655 )
scale = Vector2( 0.25, 0.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D10"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D10"]
texture = ExtResource( 2 )

[node name="Area2D11" type="Area2D" parent="."]
visible = false
position = Vector2( 642, 655 )
scale = Vector2( 0.25, 0.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D11"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D11"]
texture = ExtResource( 2 )

[node name="Area2D12" type="Area2D" parent="."]
visible = false
position = Vector2( 714, 655 )
scale = Vector2( 0.25, 0.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D12"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D12"]
texture = ExtResource( 2 )

[node name="Area2D13" type="Area2D" parent="."]
visible = false
position = Vector2( 786, 655 )
scale = Vector2( 0.25, 0.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D13"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D13"]
texture = ExtResource( 2 )

[node name="Area2D14" type="Area2D" parent="."]
visible = false
position = Vector2( 858, 655 )
scale = Vector2( 0.25, 0.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D14"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D14"]
texture = ExtResource( 2 )

[node name="P1tehuda0" type="Area2D" parent="."]
position = Vector2( 1188.64, 1375 )
scale = Vector2( 0.635, 0.635 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="P1tehuda0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="P1tehuda0"]
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="P1tehuda0"]
texture = ExtResource( 2 )

[node name="P1tehuda1" type="Area2D" parent="."]
position = Vector2( 1005.76, 1375 )
scale = Vector2( 0.635, 0.635 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="P1tehuda1"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="P1tehuda1"]
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="P1tehuda1"]
texture = ExtResource( 2 )

[node name="P1tehuda2" type="Area2D" parent="."]
position = Vector2( 822.88, 1375 )
scale = Vector2( 0.635, 0.635 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="P1tehuda2"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="P1tehuda2"]
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="P1tehuda2"]
texture = ExtResource( 2 )

[node name="P1tehuda3" type="Area2D" parent="."]
position = Vector2( 640, 1375 )
scale = Vector2( 0.635, 0.635 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="P1tehuda3"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="P1tehuda3"]
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="P1tehuda3"]
texture = ExtResource( 2 )

[node name="P1tehuda4" type="Area2D" parent="."]
position = Vector2( 457.12, 1375 )
scale = Vector2( 0.635, 0.635 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="P1tehuda4"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="P1tehuda4"]
texture = ExtResource( 10 )

[node name="Sprite2" type="Sprite" parent="P1tehuda4"]
texture = ExtResource( 2 )

[node name="P1tehuda5" type="Area2D" parent="."]
position = Vector2( 274.24, 1375 )
scale = Vector2( 0.635, 0.635 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="P1tehuda5"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="P1tehuda5"]
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="P1tehuda5"]
texture = ExtResource( 2 )

[node name="P1tehuda6" type="Area2D" parent="."]
position = Vector2( 91.36, 1375 )
scale = Vector2( 0.635, 0.635 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="P1tehuda6"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="P1tehuda6"]
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="P1tehuda6"]
texture = ExtResource( 2 )

[node name="P1tehuda7" type="Area2D" parent="."]
position = Vector2( -86, 1375 )
scale = Vector2( 0.635, 0.635 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="P1tehuda7"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="P1tehuda7"]
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="P1tehuda7"]
texture = ExtResource( 2 )

[node name="Zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone"]
visible = false
position = Vector2( 640, 150 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Zone"]
position = Vector2( 640, 150 )
scale = Vector2( 2.21354, 0.28125 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="."]
margin_left = -102.0
margin_top = 6.0
margin_right = 1260.0
margin_bottom = 444.0
custom_fonts/font = SubResource( 4 )
text = "ここにカードをドラッグするとカードを捨てる






Fキーでカードをドロー　　　　　カードをドラッグしたまま左右に移動させると位置入れ替え"
align = 2
